Fixes alignment of underline

--- a/less/easy.less
+++ b/less/easy.less
@@ -55,7 +55,7 @@
     .underline {
       position: absolute;
       left: 0;
-      top: 17px;
+      top: 27px;
       width: 66px;
       height: 12px;
       z-index: 1;
